--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,13 +3,13 @@ import Layout from '../layouts/Layout.astro';
 import ContactForm from '../components/ContactForm.astro';
 
 const contactInfo = {
-  email: 'contact@dzaleka.org',
+  email: 'dzalekaconnect@gmail.com',
   phone: '+265 999 123 456',
   address: 'Dzaleka Refugee Camp, Dowa District, Malawi',
   socialMedia: [
-    { name: 'Facebook', url: 'https://facebook.com/dzaleka', icon: 'facebook' },
-    { name: 'Twitter', url: 'https://twitter.com/dzaleka', icon: 'twitter' },
-    { name: 'Instagram', url: 'https://instagram.com/dzaleka', icon: 'instagram' }
+    { name: 'Facebook', url: 'https://facebook.com/dzaleka_services', icon: 'facebook' },
+    { name: 'Twitter', url: 'https://twitter.com/dzaleka_services', icon: 'twitter' },
+    { name: 'Instagram', url: 'https://instagram.com/dzaleka_services', icon: 'instagram' }
   ]
 };
 ---
